server/session.log
Current Mongosh Log ID:	68bb6a2786f67bf96f8e2d4c
Connecting to:		mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.5.7
Using MongoDB:		7.0.22
Using Mongosh:		2.5.7

For mongosh info see: [1mhttps://www.mongodb.com/docs/mongodb-shell/[0m

------
   The server generated these startup warnings when booting
   2025-09-04T11:00:28.458-05:00: Access control is not enabled for the database. Read and write access to data and configuration is unrestricted
------

test> switched to db ichra
ichra> 
ichra> 
ichra> | | | | | | | [
  {
    count: 88,
    examples: [
      '77969OR5290008-05',
      '71287OR0420022',
      '77969OR5280015',
      '39424OR1620002-06',
      '71287OR0420003',
      '71287OR0420012-05',
      '10091OR0750013-04',
      '77969OR5290001-04',
      '77969OR5290008',
      '71287OR0420012-06'
    ]
  }
]
ichra> 
ichra> 
ichra> | | | | | | | [
  {
    count: 88,
    examples: [
      '77969OR5290008-05',
      '71287OR0420022',
      '39424OR1620002-06',
      '77969OR5280015',
      '71287OR0420003',
      '71287OR0420012-05',
      '10091OR0750013-04',
      '77969OR5290001-04',
      '77969OR5290008',
      '71287OR0420012-06'
    ]
  }
]
ichra> 
ichra> 
ichra> 
ichra> Uncaught:
SyntaxError: Missing semicolon. (1:140)

> 1 | db.pricings.find({ plan_id: "SOME_PLAN_ID", age: 33, tobacco: false }, { _id:0, plan_id:1, age:1, tobacco:1, premium:1 }).limit(5).toArray()use ichra
    |                                                                                                                                             ^
  2 |

ichra> 
ichra> 
ichra> | | | [
  { plan_id: '71287OR0420022', age: 33, tobacco: false, premium: 486 },
  { plan_id: '71287OR0420022', age: 33, tobacco: false, premium: 528 },
  { plan_id: '71287OR0420022', age: 33, tobacco: false, premium: 486 },
  { plan_id: '71287OR0420022', age: 33, tobacco: false, premium: 486 },
  { plan_id: '71287OR0420022', age: 33, tobacco: false, premium: 503 }
]
ichra> 
ichra> | | | [
  { plan_id: '71287OR0420022', age: 33, tobacco: false, premium: 486 },
  { plan_id: '71287OR0420022', age: 33, tobacco: false, premium: 528 },
  { plan_id: '71287OR0420022', age: 33, tobacco: false, premium: 486 },
  { plan_id: '71287OR0420022', age: 33, tobacco: false, premium: 486 },
  { plan_id: '71287OR0420022', age: 33, tobacco: false, premium: 503 }
]
ichra> 